fix(datagrid): fix pressed action overflow icon color

--- a/projects/angular/src/data/datagrid/_properties.datagrid.scss
+++ b/projects/angular/src/data/datagrid/_properties.datagrid.scss
@@ -20,7 +20,7 @@
     --clr-datagrid-row-hover-color: #{tokens.$cds-alias-object-interaction-background-hover};
     --clr-datagrid-row-active-color: #{tokens.$cds-alias-object-interaction-background-active};
     --clr-datagrid-row-hover-font-color: #{tokens.$cds-alias-typography-color-500};
-    --clr-datagrid-action-toggle-color: #{tokens.$cds-alias-object-interaction-background-active};
+    --clr-datagrid-action-toggle-color: #{tokens.$cds-alias-object-interaction-color-active};
     --clr-datagrid-pagination-btn-color: #{tokens.$cds-alias-object-interaction-color};
     --clr-datagrid-pagination-btn-disabled-color: #{tokens.$cds-alias-status-disabled};
     --clr-datagrid-pagination-input-border-color: #{tokens.$cds-alias-object-border-color};
